# bookmarks

./: .gitignore  .travis.yml  Dockerfile  LLM_ROADMAP.md  Pipfile  README.md  bookmarks.py  config.py  createbookmarksdb.py  findbookmarksmongo.py  getbookmarks.py  initbookmarks.py  mongodbscripts.py  mongotest.py  pyproject.toml  run_script.py  test_helloworld.py  test_script.py  transformbookmarks.py
backend/: bookmarks.py  db.py  extract.py  index_runner.py  main.py
extension/: manifest.json  popup.css  popup.html  popup.js
frontend/chrome-extension/: README.md  manifest.json  toolbar.html  toolbar.js
mongodb/: getFirstDocument.py  mongodbscripts.py  mongotest.py
scripts/: config.py  createbookmarksdb.py  getbookmarks.py  run_script.py  transformbookmarks.py
