[project]
name = "bookmarks"
version = "0.1.0"
description = "Local full-text search over your Chrome bookmarks (SQLite FTS5)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "trafilatura>=1.12",
]

[project.scripts]
bookmarks-serve = "backend.main:run"
bookmarks-index = "backend.index_runner:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
